2022-11-24T08:22:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3538879481 # 257
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 98 260
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 99 261
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-23T16:25:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533863845 # 255
* notice: last 14d: unq all: 1 18
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 98 259
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 98 260
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-23]

2022-11-23T08:22:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3530353774 # 254
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 97 258
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 98 259
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-23]

2022-11-23T01:35:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3528504254 # 253
* notice: last 14d: unq all: 1 16
* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 97 257
* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 97 258
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-22]

2022-11-22T08:27:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3521618271 # 251