@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-24T08:22:57Z",
+  "timestamp" : "2022-11-25T01:36:01Z",
   "count_outdated" : 242,
   "uniques_outdated" : 87,
-  "count" : 261,
+  "count" : 262,
   "uniques" : 99,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
