@@ -1,3 +1,11 @@
+2022-11-25T01:36:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544670435 # 259
+* notice: last 14d: unq all: 1 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 87 242 / 99 261
+* notice: next accum: outdated-unq outdated-all / unq all: 87 242 / 99 262
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-24]
+
 2022-11-24T08:22:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3538879481 # 257
 * notice: last 14d: unq all: 1 19
